src/assets/base.css
:root {
  --vt-c-white: #ffffff;
  --vt-c-black: #181818;

  --vt-c-baby-blue: #cee6f2;
  --vt-c-beril-blue: #6fa1bb;
  --vt-c-lilac: #f6ede3;
  --vt-c-strawberry: #d2385a;
  --vt-c-peach: #e3867d;
  --vt-c-dark-sage: #507b6a;

  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
}

/* semantic color variables for this project */
:root {
  --font-serif: 'Playfair', serif;
  --font-sans: 'Source Sans 3', sans-serif;

  --color-white: var(--vt-c-white);
  --color-white-dark: var(--vt-c-lilac);

  --color-black: var(--vt-c-black);
  --color-black-light: var(--vt-c-divider-light-1);

  --color-red: var(--vt-c-strawberry);
  --color-red-light: var(--vt-c-peach);

  --color-blue: var(--vt-c-beril-blue);
  --color-blue-light: var(--vt-c-baby-blue);

  --color-green: var(--vt-c-dark-sage);

  --color-text-dark: var(--vt-c-black);
  --color-text-light: var(--vt-c-white);

  --color-background: var(--vt-c-white);
  --color-background-soft: var(--vt-c-divider-light-1);
  --color-background-mute: var(--vt-c-divider-light-2);

  --color-border: var(--vt-c-divider-dark-2);
  --color-border-hover: var(--vt-c-divider-dark-1);

  --box-shadow-high: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
  --box-shadow-low: 0 4px 8px 0 rgba(0, 0, 0, 0.2);

  --animate-duration: 800ms;
  --animate-delay: 0.9s;
  --animate-transition: 0.3s;
}

